[tool.poetry]
name = "pivarium-station"
version = "0.1.0"
description = ""
authors = ["Peter McClonski <mcclonski.peter@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pivarium-station", from="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
krausening = "^17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
